<resources>
    <string name="app_name">GithubTrend</string>
    <string name="search">Search repo</string>
    <string name="search_repo">Search Repositories..</string>
    <string name="search_devs">Search developers..</string>
    <string name="no_internet_text">Connection not available</string>
    <string name="contributors">Contributors</string>
    <string name="visit">Visit site</string>
    <string name="sponsor">Sponsor</string>
    <string name="repositories">Repositories</string>
    <string name="developers">Developers</string>
    <string name="back_title">Back</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- strings used for transitions -->
    <string name="transition_name_image">transition:PROFILE_IMAGE</string>
    <string name="transition_name_repo_author">transition:REPO_AUTHOR</string>
    <string name="transition_name_repo_name">transition:REPO_NAME</string>
    <string name="transition_name_language">transition:LANGUAGE</string>
    <string name="transition_name_user_id">transition:USER_ID</string>
    <string name="transition_name_stars">transition:STARS</string>
    <string name="transition_name_forks">transition:FORKS</string>
    <string name="transition_name_description">transition:DESCRIPTION</string>

</resources>
