<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/top_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/repo_profile_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:transitionName="@string/transition_name_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_details_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_arrow_back_black"
            android:padding="18dp"
            android:layout_marginTop="40dp" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_view_layout"
        android:padding="18dp">

        <TextView
            android:id="@+id/repo_detail_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="tokyo-metropolitan-gov"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="@string/transition_name_repo_author"
            android:textColor="@color/text_color_primary" />

        <TextView
            android:id="@+id/repo_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="gergergetghthtrhthr"
            android:textSize="16sp"
            android:transitionName="@string/transition_name_description"
            android:textColor="@color/text_color_primary"
            app:layout_constraintTop_toBottomOf="@+id/repo_detail_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/repo_detail_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Java"
            android:textSize="16sp"
            android:transitionName="@string/transition_name_language"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/repo_detail_author" />

        <LinearLayout
            android:id="@+id/stars_forks_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repo_detail_description">

            <ImageView
                android:id="@+id/repo_stars_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:transitionName="@string/transition_name_stars"
                android:src="@drawable/ic_star"/>

            <TextView
                android:id="@+id/repo_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12321"
                android:textSize="18sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/text_color_primary"
                android:layout_marginLeft="6dp" />

            <View
                android:id="@+id/divider_line"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/light_grey"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <ImageView
                android:id="@+id/repo_fork_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/fork_icon"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:transitionName="@string/transition_name_forks" />

            <TextView
                android:id="@+id/repo_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="122"
                android:textSize="18sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/text_color_primary"
                android:layout_marginLeft="6dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/contributors_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contributors"
            android:textSize="18sp"
            android:textColor="@color/text_color_primary"
            app:layout_constraintTop_toBottomOf="@+id/stars_forks_layout"
            app:layout_constraintStart_toStartOf="parent" />

        <com.pandey.shubham.githubtrends.customview.ContributorsView
            android:id="@+id/contributor_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contributors_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>